# pythonLearning

fundamentals/: boolean04.py  dictionaries06.py  exercises.py  forLoop09.py  functions11.py  ifStatements08.py  lists05.py  numbers03.py  string02.py  tuplesAndSets06.py  variables01.py  whileLoop10.py
pythonDataEngineering/clean-feature-dataset-exercise/: README.md  clean_orders.csv  generate_dataset.py  main.py  pyproject.toml
pythonDataEngineering/clean-feature-dataset-exercise/data/: clean_orders.csv  customer_order_summary.csv  orders_with_features.csv  raw_orders_dirty_5000.csv
pythonDataEngineering/data-practice/: .airflowignore  Makefile  README.md  airflow08.py  broadcasting03.py  cleaning_dataset_pipeline.py  expectations07.py  grouping06.py  numpy02.py  pandas04.py  pyproject.toml  selectFilterClean05.py
pythonDataEngineering/dbt-practice/: .gitignore  README.md  dbt_project.yml  profiles.yml.example  pyproject.toml
pythonDataEngineering/dbt-practice/models/: schema.yml
pythonDataEngineering/dbt-practice/seeds/: raw_orders.csv
pythonProduction/: classesObjects01.py  errorHandling03.py  methods02.py  price.py  tempClass.py
pythonProduction/bank-project/: account.py  pyproject.toml  test_account.py
pythonProduction/logging-project/: main.py  pyproject.toml
pythonProduction/practice-project/: main.py  pyproject.toml
pythonProduction/shape-project/: main.py  pyproject.toml  shapes.py
pythonProduction/testing-project/: main.py  pyproject.toml  test_math.py
pythonProduction/text-tools/: main.py  pyproject.toml  test_tools.py
(+2 files in other folders)
