[project]
name = "data-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apache-airflow>=3.3.0",
    "apache-airflow-providers-standard>=1.16.0",
    "great-expectations>=1.18.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
]
